--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
             <link rel="stylesheet" href="style.css">
   </head>
 <body>
-
+<section>
 <h1>Types of Bass Guitars</h1>
 
 <blockquote>"None of us wanted to be the bass player. In our minds he was the fat guy who always played at the back." <i>Paul McCartney</i>
 </blockquote>
+  </section>
+<section>
 <p>The bass guitar is the forgotten instrument in the musical world. Bass players are often nameless, standing in the shadows of lead singers and guitar players.  However, there are a few bass players who have managed to step into the limelight:</p>
 <ul>
   <li>John Entwistle - <b>The Who</b></li>
@@ -22,8 +24,9 @@
   <li>Billy Sheehan - <b>David Lee Roth/Mr. Big</b></li>
   <li>Steve Harris - <b>Iron Maiden</b></li>
 </ul>
+  </section>
 <p>Just like bass players aren't often showcased, bass guitars often pale in comparison to the attention given to electric guitars. On this page, we celebrate all types of bass guitars. We will highlight the many different types of basses and the styles they are best used for.</p>
-
+<section>
 <h2><b>Acoustic Bass Guitars</b></h2>
 <h3><b>Upright Acoustic Bass</b></h3>
 <p>The upright acoustic bass is akin to the symphonic double bass. Instead of being played with a bow while sitting, the player stands up straight and plucks the strings with the fingers. The playing surface of this bass is fretless, meaning that the player can produce any pitch and playing in tune relies on the player's skill and knowledge. This style of bass is most popular in the musical styles of jazz, acoustic country, and rockabilly.</p>
@@ -31,6 +34,8 @@
 <h3><b>Acoustic/Electric Bass</b></h3>
 <p>The acoustic bass is essentially an acoustic adaptation of the electric bass. Smaller than the upright bass, the player is typically seated and the bass rests in the player's lap. The bass is also fretted, meaning that metal bars (or frets) are embedded in the playing surface so that exact notes can be played. This bass usually also has an electric pickup that preserves the acoustic sound but allows it to be amplified. This style of bass is most often used for acoustic sessions for bands that normally play with electric instruments (such as rock or country bands).</p>
 <img src="AcousticElectricBass.jpg" alt="Acoustic Electric Bass" height="200">
+  </section>
+<section>
 <h2><b>Electric Bass Guitars</b></h2>
   <blockquote>“Let there be bass.” <i>Leo Fender</i></blockquote>
 <h3><b>4 String Electric Bass</b></h3>
@@ -51,6 +56,7 @@
 <h3><b>12-String Electric Bass</b></h3>
 <p>The 12-string electric bass is very much like the 8-string bass, but the octave string is doubled. The tuning is again E, A, D, G and is played like a 4-string with each set of 3 strings played together. The 3 string grouping includes a normal bass string, plus two strings tuned an octave higher. The two octave strings are tuned to the exact same note, but slight variations in the tension as the strings are played give a more full sound like plucking a piano. The 12-string bass adds a lot of tension to the neck of the guitar which, in addition to playing 3 strings at once, makes the 12-string bass much more difficult to play. However, the full sound lends itself well to rock trios.</p>
 <img src="12StringElectricBass.png" alt="12 String Electric Bass" width="400">
+  </section>
 
 </body>
 </html>
