--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </ul>
   </section>
 <p>Just like bass players aren't often showcased, bass guitars often pale in comparison to the attention given to electric guitars. On this page, we celebrate all types of bass guitars. We will highlight the many different types of basses and the styles they are best used for.</p>
-<section>
+<section class="acoustic">
 <h2><b>Acoustic Bass Guitars</b></h2>
 <h3><b>Upright Acoustic Bass</b></h3>
 <p>The upright acoustic bass is akin to the symphonic double bass. Instead of being played with a bow while sitting, the player stands up straight and plucks the strings with the fingers. The playing surface of this bass is fretless, meaning that the player can produce any pitch and playing in tune relies on the player's skill and knowledge. This style of bass is most popular in the musical styles of jazz, acoustic country, and rockabilly.</p>
@@ -35,7 +35,7 @@
 <p>The acoustic bass is essentially an acoustic adaptation of the electric bass. Smaller than the upright bass, the player is typically seated and the bass rests in the player's lap. The bass is also fretted, meaning that metal bars (or frets) are embedded in the playing surface so that exact notes can be played. This bass usually also has an electric pickup that preserves the acoustic sound but allows it to be amplified. This style of bass is most often used for acoustic sessions for bands that normally play with electric instruments (such as rock or country bands).</p>
 <img src="AcousticElectricBass.jpg" alt="Acoustic Electric Bass" height="200">
   </section>
-<section>
+<section class="electric">
 <h2><b>Electric Bass Guitars</b></h2>
   <blockquote>“Let there be bass.” <i>Leo Fender</i></blockquote>
 <h3><b>4 String Electric Bass</b></h3>
