--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </section>
 <p>Just like bass players aren't often showcased, bass guitars often pale in comparison to the attention given to electric guitars. On this page, we celebrate all types of bass guitars. We will highlight the many different types of basses and the styles they are best used for.</p>
 <section class="acoustic">
-  <h2><b>Acoustic <em>Bass</em> Guitars</b></h2>
+  <h2><b>Acoustic ("em")Bass("em") Guitars</b></h2>
 <h3><b>Upright Acoustic Bass</b></h3>
 <p>The upright acoustic bass is akin to the symphonic double bass. Instead of being played with a bow while sitting, the player stands up straight and plucks the strings with the fingers. The playing surface of this bass is fretless, meaning that the player can produce any pitch and playing in tune relies on the player's skill and knowledge. This style of bass is most popular in the musical styles of jazz, acoustic country, and rockabilly.</p>
 <img src="UprightAcousticBass.jpg" alt="Acoustic Upright Bass" height="200">
@@ -36,7 +36,7 @@
 <img src="AcousticElectricBass.jpg" alt="Acoustic Electric Bass" height="200">
   </section>
 <section class="electric">
-  <h2><b>Electric <em>Bass</em> Guitars</b></h2>
+  <h2><b>Electric ("em")Bass("em") Guitars</b></h2>
   <blockquote>“Let there be bass.” <i>Leo Fender</i></blockquote>
 <h3><b>4 String Electric Bass</b></h3>
 <p>The 4-string electric bass is the most common type. There are several models and styles, but the tuning of the 4-string bass of E, A, D, G matches the bottom 4 strings of the 6-string electric guitar. One of the most popular models is the Fender® Precision Bass (or P-Bass).</p>
