--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <section>
 <p class=“specialtext”>The bass guitar is the forgotten instrument in the musical world. Bass players are often nameless, standing in the shadows of lead singers and guitar players.  However, there are a few bass players who have managed to step into the limelight:</p>
 <ul>
-  <li><a href=“https://en.wikipedia.org/wiki/John_Entwistle”>John Entwistle</a>- <b>The Who</b></li>
-  <li><a href=“https://en.wikipedia.org/wiki/Paul_McCartney”>Paul McCartney</a> - <b>The Beatles</b></li>
-  <li><a href=“https://en.wikipedia.org/wiki/Geddy_Lee”>Geddy Lee</a> - <b>Rush</b></li>
-  <li><a href=“https://en.wikipedia.org/wiki/Jaco_Pastorius”>Jaco Pastorius</a> - <b>Weather Report</b></li>
-  <li><a href=“https://en.wikipedia.org/wiki/Flea_(musician)”>Flea</a> - <b>The Red Hot Chili Peppers</b></li>
-  <li><a href=“https://en.wikipedia.org/wiki/Bootsy_Collins”>Bootsy Collins</a>- <b>Parliament Funkadelic</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/John Entwistle" target="_blank">John Entwistle</a>- <b>The Who</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/Paul McCartney" target="_blank">Paul McCartney</a> - <b>The Beatles</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/Geddy Lee" target="_blank">Geddy Lee</a> - <b>Rush</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/Jaco Pastorius" target="_blank">Jaco Pastorius</a>- <b>Weather Report</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/Flea_(musician)" target="_blank">Flea</a> - <b>The Red Hot Chili Peppers</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/Bootsy Collins" target="_blank">Bootsy Collins</a>- <b>Parliament Funkadelic</b></li>
   <li><a href=“https://en.wikipedia.org/wiki/Victor_Wooten”>Victor Wooten</a>- <b>Bela Fleck and the Flecktones</b></li>
   <li><a href=“https://en.wikipedia.org/wiki/Chris_Squire”>Chris Squire</a> - <b>Yes</b></li>
   <li><a href=“https://en.wikipedia.org/wiki/Billy_Sheehan”>Billy Sheehan</a>- <b>David Lee Roth/Mr. Big</b></li>
