--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <li><a href="https://en.wikipedia.org/wiki/Jaco Pastorius" target="_blank">Jaco Pastorius</a>- <b>Weather Report</b></li>
   <li><a href="https://en.wikipedia.org/wiki/Flea_(musician)" target="_blank">Flea</a> - <b>The Red Hot Chili Peppers</b></li>
   <li><a href="https://en.wikipedia.org/wiki/Bootsy Collins" target="_blank">Bootsy Collins</a>- <b>Parliament Funkadelic</b></li>
-  <li><a href=“https://en.wikipedia.org/wiki/Victor_Wooten”>Victor Wooten</a>- <b>Bela Fleck and the Flecktones</b></li>
-  <li><a href=“https://en.wikipedia.org/wiki/Chris_Squire”>Chris Squire</a> - <b>Yes</b></li>
-  <li><a href=“https://en.wikipedia.org/wiki/Billy_Sheehan”>Billy Sheehan</a>- <b>David Lee Roth/Mr. Big</b></li>
-  <li><a href=“https://en.wikipedia.org/wiki/Steve_Harris_(musician)”>Steve Harris</a> - <b>Iron Maiden</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/Victor Wooten" target="_blank">Victor Wooten</a>- <b>Bela Fleck and the Flecktones</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/Chris Squire" target="_blank">Chris Squire</a> - <b>Yes</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/Billy Sheehan" target="_blank">Billy Sheehan</a>- <b>David Lee Roth/Mr. Big</b></li>
+  <li><a href="https://en.wikipedia.org/wiki/Steve Harris_(musician)" target="_blank">Steve Harris</a> - <b>Iron Maiden</b></li>
 </ul>
   </section>
 <p>Just like bass players aren't often showcased, bass guitars often pale in comparison to the attention given to electric guitars. On this page, we celebrate all types of bass guitars. We will highlight the many different types of basses and the styles they are best used for.</p>
